--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -182,6 +182,12 @@
     <Compile Include="Movimientos\Pagos\frmMovimientoPagosAltas.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Movimientos\Pagos\frmMovimientoPagosConsultaIndividual.Designer.vb">
+      <DependentUpon>frmMovimientoPagosConsultaIndividual.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Movimientos\Pagos\frmMovimientoPagosConsultaIndividual.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Movimientos\SalidasMateriales\frmMovimientoSalidasMaterialesAltas.Designer.vb">
       <DependentUpon>frmMovimientoSalidasMaterialesAltas.vb</DependentUpon>
     </Compile>
@@ -267,6 +273,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Movimientos\Pagos\frmMovimientoPagosAltas.resx">
       <DependentUpon>frmMovimientoPagosAltas.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Movimientos\Pagos\frmMovimientoPagosConsultaIndividual.resx">
+      <DependentUpon>frmMovimientoPagosConsultaIndividual.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Movimientos\SalidasMateriales\frmMovimientoSalidasMaterialesAltas.resx">
       <DependentUpon>frmMovimientoSalidasMaterialesAltas.vb</DependentUpon>
