--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -307,6 +307,7 @@
     <EmbeddedResource Include="Reportes\ReporteCuentas.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteEmpleados.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteGastos.rdlc" />
+    <EmbeddedResource Include="Reportes\ReporteMaterialPorExistencia.rdlc" />
     <EmbeddedResource Include="Reportes\ReportePozos.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteTarifas.rdlc" />
   </ItemGroup>
