--- a/Sistema/Sistema.vbproj
+++ b/Sistema/Sistema.vbproj
@@ -319,6 +319,7 @@
     <EmbeddedResource Include="Reportes\ReporteGastos.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteMaterialPorExistencia.rdlc" />
     <EmbeddedResource Include="Reportes\ReportePozos.rdlc" />
+    <EmbeddedResource Include="Reportes\ReporteProveedores.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteServicios.rdlc" />
     <EmbeddedResource Include="Reportes\ReporteTarifas.rdlc" />
   </ItemGroup>
